2013-12-06 Jan Kotanski <jankotan@gmail.com>
	* changing ndts into nxswriter
	* tagged as 1.5.0

2013-12-03 Jan Kotanski <jankotan@gmail.com>
	* making changes in spaces
	* tagged as 1.4.4

2013-11-26 Jan Kotanski <jankotan@gmail.com>
	* adding dev_state implementation
	* tagged as 1.4.3

2013-11-19 Jan Kotanski <jankotan@gmail.com>
	* fixes interference of TANGO groups and reshaping TANGO memeber
	* tagged as 1.4.2

2013-11-13 Jan Kotanski <jankotan@gmail.com>
	* adding Errors attribute and a FAULT server state
	* tagged as 1.4.1

2013-11-12 Jan Kotanski <jankotan@gmail.com>
	* adding asynchronous versions of OpenEntry, Record, CloseEntry
	* tagged as 1.4.0

2013-11-08 Jan Kotanski <jankotan@gmail.com>
	* adding reshaping fields
	* tagged as 1.3.1

2013-10-23 Jan Kotanski <jankotan@gmail.com>
	* change format to rank in JSON data
	* spitting DataSources and H5Elements
	* making TheXMLSettings  and The JSONString in expert view level
	* tagged as 1.3.0

2013-09-24 Jan Kotanski <jankotan@gmail.com>
	* adding possibility of appending a new [NXentry] group to the existing file
	* fixing NumberOfThreads property update
	* fixing tests for ProxyTools
	* tagged as 1.2.2

2013-08-27 Jan Kotanski <jankotan@gmail.com>
	* adding NX_class attribute for NexDatasLogs collection
	* creating ProxyTools class
	* fixing setting decoders for Tango group datasource and parsing " for PyEval datasource scripts
	* tagged as 1.2.1

2013-08-20 Jan Kotanski <jankotan@gmail.com>
	* adding group to TANGO datasources
	* adding PYEVAL datasource for evaluating data by python script
	* adding NumberOfThreads device property
	* adding python_version field into nexus logs
	* changing linking system
	* tagged as 1.2.0

2013-08-06 Jan Kotanski <jankotan@gmail.com>
	* adding filling failed object by its maximal value
	* tagged as 1.1.8

2013-06-27 Jan Kotanski <jankotan@gmail.com>
	* changing error messages
	* adding tests for string attribute
	* tagged as 1.1.7
