@@ -1,5 +1,5 @@
 ----------
-NexDaTaS
+NexDaTaS 
 ----------
 
 Authors: Jan Kotanski, Eugen Wintersberger, Halil Pasic
