@@ -1,11 +1,0 @@
-/**
- * Device Class Identification:
- * 
- * Class Name   :	TangoDataServer
- * Contact      :	jkotan@mail.desy.de
- * Class Family :	Acquisition
- * Platform     :	All Platforms
- * Bus          :	Not Applicable
- * Manufacturer :	none
- * Reference    :	
- */
